# CPP_Bjarne_Stroustrup

./: .gitignore  README.md
Chapter_01-07/: main.cpp  other.cpp
Chapter_08/cpp-calc_buggy_01/: CMakeLists.txt  main.cpp
Chapter_08/cpp-calc_buggy_02/: CMakeLists.txt
Chapter_08/cpp-cp8-drill-1-2/: CMakeLists.txt
Chapter_08/cpp-cp8-drill-1-3/: main.cpp
Chapter_08/cpp-cp8-exercise-03/: CMakeLists.txt
Chapter_08/cpp-cp8-exercise-07/: CMakeLists.txt
Chapter_08/cpp-cp8-exercise-09/: main.cpp
Chapter_08/cpp-cp8-exercise-11/: main.cpp
Chapter_08/cpp-cp8-exercise-13/: main.cpp
Chapter_09/Chrono_namespace/: .chrono.h.swp  CMakeLists.txt
Chapter_09/Exercise_01/: CMakeLists.txt  main.cpp
Chapter_09/Exercise_5/: ex5.cpp  ex5.h
Chapter_09/cpp-cp9-drill-01/: CMakeLists.txt
Chapter_09/cpp-cp9-drill-02/: CMakeLists.txt
Chapter_09/cpp-cp9-drill-03/: CMakeLists.txt
Chapter_09/cpp-cp9-drill-3/: main.cpp
Chapter_09/cpp-cp9-drill-5/: CMakeLists.txt
Chapter_1-7/: CMakeLists.txt  other.h
Chapter_10/Exercise_01/: main.cpp  myinputfile.txt
Chapter_10/Exercise_02/: CMakeLists.txt  temp_stats.cpp  temp_stats.h
Chapter_10/Exercise_05/: main.cpp
Chapter_10/Exercise_06/: main.cpp
Chapter_10/Exercise_07/: main.cpp
Chapter_10/Exercise_08/: main.cpp
Chapter_10/Exercise_09/: CMakeLists.txt
Chapter_10/Exercise_1/: CMakeLists.txt
Chapter_9/Chrono_namespace/tests/: CMakeLists.txt  chrono_test.cpp
Chapter_9/google_test_project/: CMakeLists.txt  Example.cpp  Example.h
Chapter_9/google_test_project/test/: CMakeLists.txt  basic_test.cpp
(+101 files in other folders)
